//指定版本
//注意proto3与proto2的写法有些不同
//protobuf官方中文文档
//https://www.jianshu.com/p/4443c28d4bf7
syntax = "proto3";

//包名，通过protoc生成时go文件时
package go_protos;

option go_package = "./go_protos";

message MessageContentList {
	repeated    MessageContent    list     =1;  //
}

message MessageContent {
	uint64          Type                =1;   //消息类型
	bool            FromIsSelf          =2;   //是否自己发出的
	bytes           From                =3;   //发送者
	bytes           To                  =4;   //接收者
	bytes           Content             =5;   //内容
	uint64          Time                =6;   //UNIX时间戳
	uint64          PullAndPushID       =7;   //上传或者下载ID
	bytes           SendID              =8;   //发送者唯一ID
	bytes           RecvID              =9;   //接收者唯一ID
	bytes           QuoteID             =10;   //引用消息ID
	uint32          State               =11;   //消息状态
	bytes           Index               =12;   //数据库中消息索引
	uint32        	EncryptType         =13;   //加密类型。0=未加密;1=AES加密;2=;
	bool            IsGroup             =14;   //群消息
	bytes           FileMimeType        =15;   //文件mime类型
	uint64          FileSendTime        =16;   //文件发送时间
	bytes           FileName            =17;   //文件名称
	uint64          FileType            =18;   //文件类型
	uint64          FileSize            =19;   //文件总大小
	bytes           FileHash            =20;   //文件hash
	uint64          FileBlockTotal      =21;   //文件块总数
	uint64          FileBlockIndex      =22;   //文件块编号，从0开始，连续增长的整数
	repeated  bytes  FileContent        =23;   //保存文件块的数据链index索引
	uint64        	TransProgress       =24;   //传送进度百分比
}

